syntax = "proto3";

message OneofTestSub {
  oneof oneOf { string testString = 1; }
}

message OneofTest {
  oneof oneOf {
    string testString = 1;
    OneofTestSub testMessage = 2;
  }
}
